Fixed some spacing

--- a/src/main.css
+++ b/src/main.css
@@ -42,6 +42,7 @@ h3 {
   font-size: 1.1rem;
 }
 
+
 /*   ///////  Links  ///////   */
 
 a:link,
@@ -57,6 +58,7 @@ a:active {
   border-radius: 3px;
 }
 
+
 /*   ///////  Buttons  ///////   */
 
 .btn {
@@ -64,7 +66,9 @@ a:active {
 }
 
 /*  ///////////////////////  */
-/*  /////// Header ////////  */
+
+/*          Header           */
+
 /*  ///////////////////////  */
 
 .header {
@@ -105,7 +109,11 @@ a:active {
   background-color: #b1f3ea;
 }
 
-/*  /// Mobile navigation ///  */
+/* /////////////////////////// */
+
+/*      Mobile navigation      */
+
+/* ////////////////////////// */
 
 .btn-mobile-nav {
   border: none;
@@ -125,13 +133,15 @@ a:active {
 }
 
 /*  //////////////////////  */
-/*  //////// Hero ////////  */
+
+/*           Hero           */
+
 /*  //////////////////////  */
 
 .hero-text-box {
   display: block;
   justify-content: center;
-  margin: 100px 100px 90px 100px;
+  margin: 90px 100px 80px 100px;
 }
 
 .btn-ghost {
@@ -141,7 +151,9 @@ a:active {
 }
 
 /*  ///////////////////////  */
-/*  //////// Blurb ////////  */
+
+/*           Blurb           */
+
 /*  ///////////////////////  */
 
 .description {
@@ -161,6 +173,7 @@ a:active {
 
 .blurb p {
   font-size: 1.1rem;
+  padding: 5px 0;
 }
 
 #github--link {
@@ -177,7 +190,9 @@ a:active {
 }
 
 /*  ////////////////////////////////////  */
-/*  ///////// Project Component ////////  */
+
+/*            Project Component           */
+
 /*  ////////////////////////////////////  */
 
 .project {
@@ -186,7 +201,6 @@ a:active {
   margin: 90px auto;
   justify-items: center;
   justify-content: space-around;
-  /* justify-content: ; */
   grid-template-columns: 200px 200px 200px;
   grid-template-rows: 1fr 1fr;
   list-style: none;
@@ -226,8 +240,7 @@ a:active {
   text-align: center;
   width: 140px;
   line-height: 1.4;
-  margin: 0 auto;
-  margin-top: 12px;
+  margin: 15px auto;
   font-size: 1rem;
 }
 
@@ -257,7 +270,9 @@ h4 {
 }
 
 /*  //////////////////////////////  */
-/*  ///////// Footer /////////////  */
+
+/*            Footer                */
+
 /*  //////////////////////////////  */
 
 .footer {
@@ -316,8 +331,9 @@ h4 {
 }
 
 /* //////////////////////////////////  */
-/* //////////////////////////////////  */
-/* ///////// Breakpoints ////////////  */
+
+/*           Breakpoints               */
+
 /* //////////////////////////////////  */
 
 
@@ -437,7 +453,7 @@ h4 {
     visibility: visible;
   }
 
-  /* For when clicking on open/close icon in mobile menu */
+  /* Open/close icon in mobile menu on click */
   .nav-open .icon-mobile-nav[name="close-outline"] { display: block; }
   .nav-open .icon-mobile-nav[name="menu-outline"] { display: none; }
 
@@ -456,5 +472,4 @@ h4 {
   .address-col {
     margin-right: 25px;
   }
-
 }
